--- a/src/assets/styles/Project.scss
+++ b/src/assets/styles/Project.scss
@@ -1,7 +1,7 @@
 .projects-container {
     display: flex;
     flex-direction: column;
-    padding: 5% 10%;
+    padding: 0% 10%;
     text-align: left;
 }
   
@@ -13,6 +13,10 @@
   
 .projects-container .projects-grid .project {
     text-align: left;
+}
+.projects-container h1{
+    text-align: center;
+    padding-bottom: 20px;
 }
   
 .project h2:hover {
@@ -49,4 +53,135 @@
             padding-bottom: 5%;
         }
     }
+}
+
+
+// Portfolio Tabs
+
+
+.header {
+  text-align: start;
+  max-width: 1220px;
+  margin: 0 auto;
+}
+
+.title {
+    margin: 0;
+    font-size: 35px;
+}
+
+.subtitle {
+  font-size: 1.125rem;
+  color: white; /* gray-600 */
+  padding-bottom: 20px;
+}
+
+
+@media (max-width: 1024px) {
+  .title {
+    font-size: 38px !important;
+  }
+  .subtitle{
+    font-size: 18px;
+  }
+  .header{
+    padding: 0% 10%;
+  }
+  .tab-btn {
+    font-size: 14px;
+}
+}
+
+@media (max-width: 550px) {
+      .title {
+    font-size: 32px !important;
+  }
+  .subtitle{
+    font-size: 16px;
+  }
+  .header{
+    padding: 0px 20px;
+  }
+  .tab-btn {
+    font-size: 14px;
+}
+.tab-buttons{
+    flex-direction: column;
+    width: 100%;
+}
+.tab-wrapper{
+    padding: 0px 20px;
+}
+.tech-title{
+    font-size: 28px;
+}
+}
+
+.tab-wrapper {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 2rem;
+}
+
+.tab-buttons {
+  background-color: #f3f4f6; /* gray-100 */
+  padding: 0.25rem;
+  border-radius: 0.5rem;
+  display: inline-flex;
+}
+
+.tab-btn {
+  padding: 0.75rem 1.5rem;
+  font-size: 0.875rem;
+  font-weight: 700;
+  border-radius: 0.375rem;
+  background: transparent;
+  color: black;
+  border: none;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.tab-btn:hover {
+  color: black; /* gray-900 */
+}
+
+.tab-btn.active {
+  background-color: #5000CA;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+  color: white;
+}
+
+.tab-btn.active.custom {
+  color: white; /* blue-600 */
+}
+
+.tab-btn.active.wordpress {
+  color: white; /* purple-600 */
+}
+
+.tab-content {
+  position: relative;
+}
+
+.tab-panel {
+  transition: all 0.5s ease-in-out;
+  opacity: 0;
+  transform: translateY(1rem);
+  position: absolute;
+  inset: 0;
+  pointer-events: none;
+}
+
+.tab-panel.visible {
+  opacity: 1;
+  transform: translateY(0);
+  position: relative;
+  pointer-events: auto;
+}
+
+.tab-panel.hidden {
+  opacity: 0;
+  transform: translateY(1rem);
+  pointer-events: none;
 }
