--- a/src/index.scss
+++ b/src/index.scss
@@ -11,6 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace !important;
   font-size: 1rem !important;
 }
+.tab-btn{
+  font-family: "Figtree", "sans-serif" !important;
+}
 
 .main-container {
   position: relative;
